# agentic-rag-lab

./: .env.example  .gitignore  README.md  pyproject.toml
data/: crm_chunks.jsonl
data/crm_notes/: meeting_001_晨星科技_2026-05-08.md  meeting_002_鴻圖零售_2026-05-15.md  meeting_003_晨星科技_2026-05-22.md  meeting_004_新星金融科技_2026-05-28.md  meeting_005_晨星科技_2026-06-05.md
data/processed/: .gitkeep
data/raw/markdown_kb/: .gitkeep
docs/: roadmap.md
docs/concepts/: repo-map.md
docs/decisions/: 001-repo-structure.md
examples/: 01_file_tools_intro.ipynb  02_crm_tool_calling_agent.ipynb  03_mcp_intro.ipynb  03_mcp_server.py  04_mcp_resources_prompts.ipynb  05_evaluation.ipynb  06_structured_output.ipynb  07_checkpointing.ipynb  08_context_window.ipynb  09_markdown_parser.ipynb  10_extract_conflict.ipynb
examples/01_tool_calling_basic/: README.md
examples/02_mock_data_agent/: README.md  run.py
examples/03_markdown_parser/: README.md
examples/mcp/: mcp_server.py
examples/utils/: __init__.py  tools.py
infra/vespa/: .gitkeep
infra/vespa/schemas/: .gitkeep
scripts/: .gitkeep
src/agentic_rag_lab/: __init__.py
src/agentic_rag_lab/agents/: __init__.py  mock_data_agent.py
src/agentic_rag_lab/cli/: mock_data_agent.py
src/agentic_rag_lab/core/: logging.py
src/agentic_rag_lab/examples_data/: __init__.py  mock_orders.py
src/agentic_rag_lab/tools/: __init__.py  mock_data_tools.py
tests/unit/: test_mock_data_tools.py
