[project]
name = "agentic-rag-lab"
version = "0.1.0"
description = "Learning lab for tool-calling agents, agentic RAG, LangGraph, Vespa, and MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-genai>=1.16.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
agent-demo = "agentic_rag_lab.cli.mock_data_agent:main"
mock-data-agent = "agentic_rag_lab.cli.mock_data_agent:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
